# RasaBasicApps

./: .gitignore  Readme.md  pyproject.toml
forms-examples/: .gitignore  Readme.md  config.yml  domain.yml
forms-examples/actions/: actions.py
forms-examples/data/: nlu.yml  rules.yml  stories.yml
forms-examples/results/: DIETClassifier_report.json  failed_test_stories.yml  intent_report.json  story_report.json
forms-examples/tests/: test_stories.yml
movie-recommendation-system/: .gitignore  Readme.md  config.yml  domain.yml
movie-recommendation-system/actions/: actions.py
movie-recommendation-system/data/: nlu.yml  stories.yml
restaurant-chatbot/: .gitignore  domain.yml  endpoints.yml
restaurant-chatbot/actions/: actions.py
restaurant-chatbot/data/: nlu.yml  stories.yml
weather-app/: .gitignore  Readme.md  config.yml  domain.yml
weather-app/actions/: actions.py
weather-app/data/: nlu.yml  stories.yml
